Doc: Document peculiarity of sorting DelegateModelGroups

If an item is part of multiple groups, moving it in one group also moves
it in all other groups. This has been the case since the groups exist.

Fixes: QTBUG-73707
Change-Id: Id1a6e82f667eaf992982e693475b734f485eb8a2
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>